--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,7 @@ services:
     command: uvicorn app.main:app --host 0.0.0.0 --port ${PORT} --reload
     volumes:
       - .:/app
+      - ./logs:/app/logs
     ports:
       - "${PORT}:${PORT}"
     environment:
